--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   forui: ^0.12.0
   forui_assets: ^0.12.0
   go_router: ^14.2.0
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
