--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,33 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  forui: ^0.12.0
-  forui_assets: ^0.12.0
-  go_router: ^14.2.0
+  forui: ^0.14.1
+  forui_assets: ^0.14.0
+  go_router: ^16.0.0
   http: ^1.2.0
+  
+  # Firebase Core
+  firebase_core: ^3.15.1
+  firebase_auth: ^5.6.2
+  cloud_firestore: ^5.6.11
+  
+  # Google Sign In
+  google_sign_in: ^7.1.0
+  
+  # State Management
+  provider: ^6.1.1
+  
+  # Form Validation
+  form_validator: ^2.1.1
+  
+  # Image Picker
+  image_picker: ^1.0.7
+  
+  # Date/Time Picker
+  intl: ^0.20.2
+  
+  # Location
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +71,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
